:art: Fixed errors generic